# libtd365

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
debian/: .gitignore  changelog  control  copyright  files  libtd365-1.install  libtd365-dev.install  rules
examples/: subscribe_popular.cpp  subscribe_test.cpp  test1.cpp  test2.cpp  trade_test.cpp
include/td365/: authenticator.h  cookiejar.h  error.h  http.h  http_client.h  parsing.h  rest_api.h  td365.h  types.h  utils.h  verify.h  ws.h  ws_client.h
src/: api_client.cpp  api_client.h  async.h  authenticator.cpp  authenticator.h  base64.hpp  boost_alias.h  charconv_compat.h  constants.h  cookiejar.cpp  cookiejar.h  execution_ctx.h  graceful.h  gzip.cpp  gzip.h  http.h  http_client.cpp  http_client.h  json.cpp  json.h  parsing.cpp  parsing.h  platform.cpp  platform.h  rest_api.cpp  rest_api.h  td365.cpp  td365.h  types.cpp  types.h  utils.cpp  utils.h  verify.h  ws.cpp  ws.h  ws_client.cpp  ws_client.h
tests/: test_cancelable.cpp  test_parsing.cpp  test_utils.cpp  test_ws_reconnect.cpp
tools/: format.sh
